updated resume, combined about and home page and fixed spacing & added contact links to contact

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1437,15 +1437,24 @@
 					#me header > h1 {
 						position: absolute;
 						left: 0;
-						bottom: 52.5%;
+						bottom: 70.5%;
 						margin: 0;
 					}
 
 					#me header > p {
 						position: absolute;
 						left: 0;
-						top: 52.5%;
+						top: 35%;
 						font-size: 1.5em;
+						letter-spacing: -0.015em;
+						margin-top: 0;
+					}
+
+					#me header > h4 {
+						position: absolute;
+						left: 0;
+						top: 48.5%;
+						font-size: .85em;
 						letter-spacing: -0.015em;
 						margin-top: 0;
 					}
